# pyfsmanager

./: pyproject.toml
src/pyfsmanager/: __main__.py  cli.py  controller.py
templates/: template.json  template.py  template.txt
